translation-tool/inputs/source_meta/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Phone_Number_2__c</fullName>
        <label>Additional Phone Number 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CC_Email__c</fullName>
        <description>Email for additional contact for Welcome email or other email communications.</description>
        <inlineHelpText>Email for additional contact for Welcome email or other email communications.</inlineHelpText>
        <label>CC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CP_Language__c</fullName>
        <description>language of contact in two character code</description>
        <label>Language</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_PS_Person_BO_ID__c</fullName>
        <description>CRM PS Person BO ID</description>
        <externalId>true</externalId>
        <inlineHelpText>CRM PS Person BO ID</inlineHelpText>
        <label>CRM PS Person BO ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CSR_Reissue_Invoice_Pref__c</fullName>
        <label>CSR_Reissue_Invoice_Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Order_Confirmation_Pref__c</fullName>
        <label>Cancel_Order_Confirmation_Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Appealed_Pref__c</fullName>
        <label>Case_Appealed_Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Associated_Pref__c</fullName>
        <label>Case_Associated_Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Canceled_Pref__c</fullName>
        <label>Case_Canceled_Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Open_Pref__c</fullName>
        <label>Case_Open_Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Resolved_Pref__c</fullName>
        <label>Case_Resolved_Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The channel marketing contact is the recipient of HughesNet communications associated with service updates, customer promotions/offers, Hughes policies and retailer program updates.</description>
        <inlineHelpText>The channel marketing contact is the recipient of HughesNet communications associated with service updates, customer promotions/offers, Hughes policies and retailer program updates.</inlineHelpText>
        <label>Channel Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collections_Initiated_Terminate_Pref__c</fullName>
        <label>Collections Initiated Terminate Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Common_Preferences_Updated_From__c</fullName>
        <description>Stores the external system name from which the contact is updated</description>
        <label>Preferences Updated From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_Last_Modified_User_Name__c</fullName>
        <description>This field is  used for track the user name whom updated the preferences</description>
        <label>Last Modified User Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_or_Clarification_Pref__c</fullName>
        <label>Complaint or Clarification Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactSync_Error__c</fullName>
        <label>ContactSync Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContactSync_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContactSync Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Priority__c</fullName>
        <description>Priority of calling by CSRs</description>
        <inlineHelpText>Priority of calling by CSRs</inlineHelpText>
        <label>Contact Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>1st POC</fullName>
                </value>
                <value>
                    <fullName>2nd POC</fullName>
                </value>
                <value>
                    <fullName>3rd POC</fullName>
                </value>
                <value>
                    <fullName>Administrative Support</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Apex IT Consultant</fullName>
                </value>
                <value>
                    <fullName>Backup Customer Engineer</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Billing Segment Manager</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Call Center Management</fullName>
                </value>
                <value>
                    <fullName>Chief Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Information Officer/CTO</fullName>
                </value>
                <value>
                    <fullName>Configuration Manager</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Customer Engineer</fullName>
                </value>
                <value>
                    <fullName>Customer Senior Management</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Department Director</fullName>
                </value>
                <value>
                    <fullName>Department Manager</fullName>
                </value>
                <value>
                    <fullName>Development Engineer</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Engineering Manager</fullName>
                </value>
                <value>
                    <fullName>Executive Management</fullName>
                </value>
                <value>
                    <fullName>Field Engineer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Sync_CaseNumber__c</fullName>
        <label>Contact Sync CaseNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Gateway_Login_ID__c</fullName>
        <label>Customer Gateway Login ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Expiry_Date__c</fullName>
        <description>Expiry date corresponding to the Document Number</description>
        <label>Document Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Issue_Date__c</fullName>
        <description>Issue date corresponding to the Document Number</description>
        <label>Document Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>CC – Citizenship Card - Cedula de Ciudadania – XX.XXX.XXX
CE – Foreigner ID - Cedula de Extranjeria</description>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Citizenship Card</fullName>
                </value>
                <value>
                    <fullName>Foreigner ID</fullName>
                </value>
                <value>
                    <fullName>Peru National Identity Document (DNI)</fullName>
                </value>
                <value>
                    <fullName>Chilean Tax Identification Number (RUT)</fullName>
                </value>
                <value>
                    <fullName>Ecuador Tax Identification Number (RUC)</fullName>
                </value>
                <value>
                    <fullName>Peru Foreigner ID (CE)</fullName>
                </value>
                <value>
                    <fullName>Chilean Identity Card (RUN)</fullName>
                </value>
                <value>
                    <fullName>Ecuador Citizenship Card</fullName>
                </value>
                <value>
                    <fullName>Ecuador Foreigner ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extra_Fax__c</fullName>
        <description>This is additional field to store unformatted Fax numbers from CRM staging.</description>
        <inlineHelpText>This is additional field to store unformatted Fax numbers from CRM staging.</inlineHelpText>
        <label>Extra Fax Info</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Extra_Home_Phone_Info__c</fullName>
        <description>This is additional field to store unformatted Home phone numbers from CRM staging.</description>
        <inlineHelpText>This is additional field to store unformatted Home phone numbers from CRM staging.</inlineHelpText>
        <label>Extra Home Phone Info</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Extra_Mobile_Info__c</fullName>
        <description>This is additional field to store unformatted Mobile e numbers from CRM staging.</description>
        <inlineHelpText>This is additional field to store unformatted Mobile e numbers from CRM staging.</inlineHelpText>
        <label>Extra Mobile Info</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Extra_Other_Phone_Info__c</fullName>
        <description>This is additional field to store unformatted Other phone numbers from CRM staging.</description>
        <inlineHelpText>This is additional field to store unformatted Other phone numbers from CRM staging.</inlineHelpText>
        <label>Extra Other Phone Info</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Extra_Phone_Info__c</fullName>
        <description>This is additional field to store unformatted phone numbers from CRM staging.</description>
        <inlineHelpText>This is additional field to store unformatted phone numbers from CRM staging.</inlineHelpText>
        <label>Extra Phone Info</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HSvc_HNSCompanyID__c</fullName>
        <formula>IF(Account.RecordType.Name=&apos;Location&apos;, Account.SAN__c,  IF(Account.Is_Consumer__c, &apos;&apos;, Account.CBC_ID__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HNS Company ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_RecordTypeName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_RecurringPayment_Pref__c</fullName>
        <label>Recurring Payment Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HughesSvc_Account_CompanyOrLocation__c</fullName>
        <formula>Account.Company_or_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HughesSvc_Account CompanyOrLocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HughesSvc_PSFT_RelatedObjectID__c</fullName>
        <formula>IF(Account.Company_or_Location__c ==&apos;Location&apos; ,  Account.HNS_Location_ID__c ,  Account.CBC_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HughesSvc_PSFT_RelatedObjectID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IT Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Rescheduling_Confirm_Pref__c</fullName>
        <label>Install Rescheduling Confirm Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_Scheduling_Pref__c</fullName>
        <label>Install_Scheduling_Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_Warning_Confirm_Pref__c</fullName>
        <label>Install_Warning_Confirm_Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installer_ID__c</fullName>
        <label>Installer ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Generated_Pref__c</fullName>
        <label>Invoice Generated Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mail_to_Initiate_Termination_Pref__c</fullName>
        <label>Mail to Initiate Termination Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <label>Mailing City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <label>Mailing Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <label>Mailing State/Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Barcode__c</fullName>
        <description>This represents Barcode of Mailing Address at the Contact.</description>
        <inlineHelpText>This represents Barcode of Mailing Address at the Contact.</inlineHelpText>
        <label>Mailing Barcode</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Complement__c</fullName>
        <label>Mailing Complement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_County__c</fullName>
        <description>This represents County of Mailing Address at the Contact.</description>
        <inlineHelpText>This represents County of Mailing Address at the Contact.</inlineHelpText>
        <label>Mailing County</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Neighborhood__c</fullName>
        <label>Mailing Neighborhood</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign_Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created new fields</description>
        <label>Marketing Campaign Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign_SMS_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created for Marketing cloud sync</description>
        <label>Marketing Campaign SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaigns_Pref__c</fullName>
        <label>Marketing_Campaigns_Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modify_Order_Confirmation_Pref__c</fullName>
        <label>Modify Order Confirmation Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Promoter_Score_And_Surveys_Pref__c</fullName>
        <label>Net Promoter Score And Surveys Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Order_Confirmation_Pref__c</fullName>
        <label>New Order Confirmation Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Order_Expiration_Confiramtion_Pref__c</fullName>
        <label>New Order Expiration Confiramtion Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Order_On_Hold_Confirmation_Pref__c</fullName>
        <label>New Order On Hold Confirmation Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_Type__c</fullName>
        <inlineHelpText>This field tells type of Person</inlineHelpText>
        <label>Person Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st POC</fullName>
                </value>
                <value>
                    <fullName>2nd POC</fullName>
                </value>
                <value>
                    <fullName>3rd POC</fullName>
                </value>
                <value>
                    <fullName>Administrative Support</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Apex IT Consultant</fullName>
                </value>
                <value>
                    <fullName>Backup Customer Engineer</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Billing Segment Manager</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Call Center Management</fullName>
                </value>
                <value>
                    <fullName>Chief Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Information Officer/CTO</fullName>
                </value>
                <value>
                    <fullName>Configuration Manager</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Customer Engineer</fullName>
                </value>
                <value>
                    <fullName>Customer Senior Management</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Department Director</fullName>
                </value>
                <value>
                    <fullName>Department Manager</fullName>
                </value>
                <value>
                    <fullName>Development Engineer</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Engineering Manager</fullName>
                </value>
                <value>
                    <fullName>Executive Management</fullName>
                </value>
                <value>
                    <fullName>Field Engineer</fullName>
                </value>
                <value>
                    <fullName>Installer</fullName>
                </value>
                <value>
                    <fullName>Marketing Engineer</fullName>
                </value>
                <value>
                    <fullName>Network Switching Segment manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_Service_Interruption_Pref__c</fullName>
        <label>Planned Service Interruption Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pref_Communication__c</fullName>
        <inlineHelpText>This field tells about the prefered communication</inlineHelpText>
        <label>Pref Communication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Worklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Franchise_Contact__c</fullName>
        <label>Primary Contact?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Token_Pref__c</fullName>
        <label>Purchase Token Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repair_Complete_Pref__c</fullName>
        <label>Repair Complete Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repair_Completion_Pref__c</fullName>
        <label>Repair Completion Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repair_Initiated_Pref__c</fullName>
        <label>Repair Initiated Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>